--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,7 @@ h1 {
   padding: 220px 0px 353px;
 }
 
-.hero_decription {
+.hero__decription {
   font-family: 'Ubuntu';
   font-style: normal;
   font-weight: 400;
