--- a/scss/style.scss
+++ b/scss/style.scss
@@ -33,7 +33,7 @@ h1 {
 	position: relative;
 	padding: 220px 0px 353px;
 
-	&_decription {
+	&__decription {
 		font-family: 'Ubuntu';
 		font-style: normal;
 		font-weight: 400;
